--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "readmeUrl": "https://raw.githubusercontent.com/cveinnt/cveinnt/master/README.md",
   "title": "TRSTDM",
   "name": "John Doe",
-  "ascii": "liveterm",
+  "ascii": "TRSTDM",
   "social": {
     "github": "github",
     "linkedin": "linkedin"
